--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="estilo.css">
+</head>
+
+<body>
 <h1>hello!</h1>
 <p>Oi</p>
 <i>Teste</i>
+
+</body>
