--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="estilo.css">
+<link rel="stylesheet" type="text/css" href="estilo.css">
+<script type="text/javascript" src="js/meu-arquivo.js"></script>
 </head>
 
 <body>
 <div id="secao1">
 <h1>hello world!</h1></div>
 
-<SCRIPT LANGUAGE="JavaScript">
-<!-- Begin
-function Login(){
-var done=0;
-var username=document.login.username.value;
-username=username.toLowerCase();
-var password=document.login.password.value;
-password=password.toLowerCase();
-if (username=="123" && password=="123") { window.location="google.com"; done=1; }
-if (username=="usuario2" && password=="password2") { window.location="page2.html"; done=1; }
-if (username=="usuario3" && password=="password3") { window.location="page3.html"; done=1; }
-if (done==0) { alert("Login Invalido!"); }
-}
-// End -->
-</SCRIPT>
 <center>
 <form name="login">
 <table border="0" cellpadding="3" width="225">
