--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
+<title>UAADESAN ÁREA 8</title>
+<meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="estilo.css">
 <script type="text/javascript" src="js/meu-arquivo.js"></script>
 </head>
-
 <body>
 <div id="secao1">
 <h1>hello world!</h1></div>
-
+<div id="login">
 <center>
 <form name="login">
 <table border="0" cellpadding="3" width="225">
@@ -31,5 +34,5 @@
 </table>
 </form>
 </center>
-
+</div>
 </body>
