--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <div id="secao1">
-<h1>hello world!</h1></div>
+	<center>
+	<h1>hello world!</h1>
+	</center></div>
 <div id="login">
-<center>
-<form name="login">
-<table border="0" cellpadding="3" width="225">
+	<center>
+	<form name="login">
+	<table border="0" cellpadding="3" width="225">
 	<tbody>
 		<tr>
 			<td colspan="2">
