--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>UAADESAN ÁREA 8</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="estilo.css">
-<script type="text/javascript" src="js/meu-arquivo.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 <div id="secao1">
