--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <title>UAADESAN ÁREA 8</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="estilo.css">
-<script type="text/javascript" src="script.js"></script>
-	
+<script type="text/javascript" src="script.js">
+</head>
+<body>
+<div id="secao1">
+	<center>
+	<h1>Olá mundo!</h1>
+	</center></div>
+<div id="login">
 <SCRIPT LANGUAGE="JavaScript">
 <!-- Begin
 function Login(){
@@ -20,13 +26,7 @@ if (username=="usuario3" && password=="password3") { window.location="page3.html
 if (done==0) { alert("Login Invalido!"); }
 }
 // End -->
-</head>
-<body>
-<div id="secao1">
-	<center>
-	<h1>Olá mundo!</h1>
-	</center></div>
-<div id="login">
+</script>
 	<center>
 	<form name="login">
 	<table border="0" cellpadding="3" width="225">
