Updatee index.html

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ if (username=="usuario3" && password=="password3") { window.location="page3.html
 if (done==0) { alert("Login Invalido!"); }
 }
 // End -->
-</script>
-	<center>
-	<form name="login">
-	<table border="0" cellpadding="3" width="225">
+</SCRIPT>
+<center>
+<form name="login">
+<table border="0" cellpadding="3" width="225">
 	<tbody>
 		<tr>
 			<td colspan="2">
@@ -51,5 +51,7 @@ if (done==0) { alert("Login Invalido!"); }
 </table>
 </form>
 </center>
+
+
 </div>
 </body>
