Updatee index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>UAADESAN ÁREA 8</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="estilo.css">
-<script type="text/javascript" src="script.js">
+<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 <div id="secao1">
@@ -12,21 +12,6 @@
 	<h1>Olá mundo!</h1>
 	</center></div>
 <div id="login">
-<SCRIPT LANGUAGE="JavaScript">
-<!-- Begin
-function Login(){
-var done=0;
-var username=document.login.username.value;
-username=username.toLowerCase();
-var password=document.login.password.value;
-password=password.toLowerCase();
-if (username=="123" && password=="123") { window.location="google.com"; done=1; }
-if (username=="usuario2" && password=="password2") { window.location="page2.html"; done=1; }
-if (username=="usuario3" && password=="password3") { window.location="page3.html"; done=1; }
-if (done==0) { alert("Login Invalido!"); }
-}
-// End -->
-</SCRIPT>
 <center>
 <form name="login">
 <table border="0" cellpadding="3" width="225">
@@ -51,7 +36,6 @@ if (done==0) { alert("Login Invalido!"); }
 </table>
 </form>
 </center>
-
-
 </div>
 </body>
+</html>
