Updateee index.html

--- a/index.html
+++ b/index.html
@@ -8,30 +8,31 @@
 </head>
 <body>
 <div id="secao1">
-	<center>
-	<h1>Olá mundo!</h1>
-	</center></div>
+<center>
+<h1>Olá mundo!</h1>
+</center>
+</div>
 <div id="login">
 <center>
 <form name="login">
 <table border="0" cellpadding="3" width="225">
-	<tbody>
-		<tr>
-			<td colspan="2">
-			<center><font face="verdana" size="2"><b>&Aacute;REA PARA MEMBROS</b></font></center>
-			</td>
-		</tr>
-		<tr>
-			<td>Usu&aacute;rio:</td>
-			<td><input name="username" type="text" /></td>
-		</tr>
-		<tr>
-			<td>Senha:</td>
-			<td><input name="password" type="password" /></td>
-		</tr>
-		<tr>
-			<td align="center" colspan="2"><input onclick="Login()" type="button" value="Entrar" /></td>
-		</tr>
+<tbody>
+	<tr>
+	<td colspan="2">
+	<center><font face="verdana" size="2"><b>&Aacute;REA PARA MEMBROS</b></font></center>
+	</td>
+	</tr>
+	<tr>
+	<td>Usu&aacute;rio:</td>
+	<td><input name="username" type="text" /></td>
+	</tr>
+	<tr>
+	<td>Senha:</td>
+	<td><input name="password" type="password" /></td>
+	</tr>
+	<tr>
+	<td align="center" colspan="2"><input onclick="Login()" type="button" value="Entrar" /></td>
+	</tr>
 	</tbody>
 </table>
 </form>
