--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <tbody>
 	<tr>
 	<td colspan="2">
-	<center><font face="verdana" size="2"><b>&Aacute;REA PARA MEMBROS</b></font></center>
+	<center><font face="verdana" size="2"><b>ÁREA PARA LÍDERES</b></font></center>
 	</td>
 	</tr>
 	<tr>
-	<td>Usu&aacute;rio:</td>
+	<td>Usuário:</td>
 	<td><input name="username" type="text" /></td>
 	</tr>
 	<tr>
