Updateeeee index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <tbody>
 	<tr>
 	<td colspan="2">
-	<center><font face="verdana" size="2"><b>ÁREA PARA LÍDERES</b></font></center>
+	<center><font face="verdana" size="2"><b>ACESSO A LÍDERES</b></font></center>
 	</td>
 	</tr>
 	<tr>
